Updated modules Book, Author, Picture, Category excluding delete finctionality.

--- a/WebBack/Views/BookStores/Create.cshtml
+++ b/WebBack/Views/BookStores/Create.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Create Book Store";
 }
-<div class="text-center bg-info text-light py-4 mb-5">
+<div class="text-center bg-info text-light py-4 mb-5CategoriesCategories">
     <h1 class="display-4">Create</h1>
     <h1 class="display-6">Create a new book store</h1>
 </div>
