--- a/WebBack/Views/Categories/Create.cshtml
+++ b/WebBack/Views/Categories/Create.cshtml
@@ -1,11 +1,11 @@
 @model WebBack.Models.BookStore
 
 @{
-    ViewData["Title"] = "Create Book Store";
+    ViewData["Title"] = "Create Book Categories";
 }
 <div class="text-center bg-info text-light py-4">
     <h1 class="display-4">Create</h1>
-    <h1 class="display-6">Create a new book store</h1>
+    <h1 class="display-6">Create a new book categories</h1>
 </div>
 <hr />
 <div class="row">
