--- a/WebBack/Views/BookStores/Index.cshtml
+++ b/WebBack/Views/BookStores/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="text-center bg-info text-light py-4 mb-5">
-    <h1 class="display-4">Book Storres</h1>
+    <h1 class="display-4">Book Stores</h1>
     @if(Model.Count() == 0)
     {
         <h4 class="display-6">Sorry No items found. Please <a asp-action="Create" class="btn btn-primary"><i class="fas fa-plus"></i>&nbsp;click here</a> to add new item(s).</h4>
