--- a/WebBack/Views/Shared/_LoginPartial.cshtml
+++ b/WebBack/Views/Shared/_LoginPartial.cshtml
@@ -7,22 +7,54 @@
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {
-    <li class="nav-item">
-        <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+    
+    <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle text-dark @ViewData["TransactionsActivity"]" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="far fa-user-circle"></i></a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item text-dark @ViewData["PurchaseActivity"]" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage"><i class="far fa-address-card"></i>&nbsp;Manage</a>
+            <div class="dropdown-divider"></div>
+            @* <a class="dropdown-item text-dark"> *@
+                <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                    <button id="logout" type="submit" class="dropdown-item text-dark"><i class="fas fa-sign-out-alt"></i>&nbsp;Logout</button>
+                </form>
+            @* </a> *@
+        </div>
     </li>
-    <li class="nav-item">
+    @* <li class="nav-item">
+        <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+    </li> *@
+    @* <li class="nav-item">
         <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
             <button id="logout" type="submit" class="nav-link btn btn-link text-dark">Logout</button>
         </form>
+    </li> *@
+    <li class="nav-item dark-mood" id="darkMood">
+        <a id="manage" class="nav-link text-dark" title="Change theme into dark mood"><i class="fas fa-moon"></i></a>
+    </li>
+    <li class="nav-item light-mood" id="lightMood">
+        <a id="manage" class="nav-link text-dark" title="Change theme into light mood"><i class="far fa-sun"></i></a>
     </li>
 }
 else
 {
-    <li class="nav-item">
+    <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle text-dark @ViewData["TransactionsActivity"]" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="far fa-user-circle"></i></a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item text-dark" id="register" asp-area="Identity" asp-page="/Account/Register"><i class="fas fa-user-plus"></i>&nbsp;Register</a>
+            <a class="dropdown-item text-dark" id="login" asp-area="Identity" asp-page="/Account/Login"><i class="fas fa-sign-in-alt"></i>&nbsp;Login</a>
+        </div>
+    </li>
+    @* <li class="nav-item">
         <a class="nav-link text-dark" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/Login"><i class="fas fa-sign-in-alt"></i>&nbsp;Login</a>
+    </li> *@
+    <li class="nav-item moon dark-mood" id="darkMood">
+        <i class="fas fa-moon"></i>
+    </li>
+    <li class="nav-item sun light-mood" id="lightMood">
+        <i class="far fa-sun"></i>
     </li>
 }
 </ul>
